# Naive_Geant4_example

./: .gitignore  CMakeLists.txt  G4History.macro  G4tutorial.cc  README  demo  merge.py  run.sh  run_script.sh  vis.mac
include/: DetectorConstruction.hh  DetectorMessenger.hh  Geometry.hh  ParticleSource.hh  PrimaryGeneratorAction.hh
marcos/: run1.mac
src/: DetectorConstruction.cc  DetectorMessenger.cc  Geometry.cc  ParticleSource.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
